[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/RicePrice.png" type="Texture" id=1]
[ext_resource path="res://Script/chooseRice.gd" type="Script" id=2]
[ext_resource path="res://Script/CanvasLayer_calculadora.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ChooseRice" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 1 )

[node name="wrongRice" type="Button" parent="."]
show_behind_parent = true
margin_left = 91.0
margin_top = 240.0
margin_right = 412.0
margin_bottom = 638.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightRice" type="Button" parent="."]
show_behind_parent = true
margin_left = 491.0
margin_top = 240.0
margin_right = 813.0
margin_bottom = 638.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wrongRIce2" type="Button" parent="."]
show_behind_parent = true
margin_left = 886.0
margin_top = 239.0
margin_right = 1207.0
margin_bottom = 638.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="RichTextLabel1" type="RichTextLabel" parent="."]
margin_left = 240.0
margin_top = 516.0
margin_right = 390.0
margin_bottom = 576.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 650.0
margin_top = 516.0
margin_right = 800.0
margin_bottom = 576.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 1050.0
margin_top = 516.0
margin_right = 1200.0
margin_bottom = 576.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="wrongRice" to="." method="_on_wrongRice_pressed"]
[connection signal="pressed" from="rightRice" to="." method="_on_rightRice_pressed"]
[connection signal="pressed" from="wrongRIce2" to="." method="_on_wrongRIce2_pressed"]
